syntax = "proto2";
package walpb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

message Metadata {
	optional uint64 NodeID    	= 1 [(gogoproto.nullable) = false];
	optional uint64 ClusterID 	= 2 [(gogoproto.nullable) = false];
	optional bytes data  = 3;
}

message Snapshot {
	optional uint64 index = 1 [(gogoproto.nullable) = false];
	optional uint64 term  = 2 [(gogoproto.nullable) = false];
}
